<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_product"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="4dp"
    android:background="@drawable/border_product">

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="45sp"
        android:layout_height="36dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/open_sans"
        android:includeFontPadding="true"
        android:padding="0dp"
        android:text="@string/Plus"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#9e9e9e"
        app:layout_constrainedHeight="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/open_sans"
        android:padding="0dp"
        android:text="@string/Minus"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#9e9e9e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus" />

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/btn_minus" />

    <TextView
        android:id="@+id/txt_amountItemFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/unidades"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_amount"
        app:layout_constraintEnd_toEndOf="@+id/txt_amount"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/txt_amount"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_grain_sack"
        android:contentDescription="@string/product_image" />

    <ToggleButton
        android:id="@+id/btn_favorite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_favorite"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_productName"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textAlignment="textStart"
        android:textColor="#5f6062"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_market"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/product_description"
        android:textAlignment="textStart"
        android:textColor="#5f6062"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_productPrice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toBottomOf="@+id/txt_productName" />

    <TextView
        android:id="@+id/txt_productPrice1"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/price1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product" />

</androidx.constraintlayout.widget.ConstraintLayout>