<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginRight="12dp"
    android:background="@drawable/layout_bg">

    <ImageView
        android:id="@+id/coupon_image"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/market_photo"
        app:layout_constraintBottom_toTopOf="@+id/txt_value"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="160dp" />

    <TextView
        android:id="@+id/txt_expiration"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/expira_en_xx_dias"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ver_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coupon_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="180dp" />

    <Button
        android:id="@+id/btn_ver_qr"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ver_c_digo_qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_expiration"
        app:layout_constraintStart_toStartOf="@+id/txt_expiration" />

    <TextView
        android:id="@+id/txt_value"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/xx"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/coupon_image"
        app:layout_constraintStart_toStartOf="@+id/coupon_image" />

    <TextView
        android:id="@+id/txt_expired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expirado"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coupon_image"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>