<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_bottom_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/amount"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_productName"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/open_sans"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textColor="#666666"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_productPrice1"
        app:layout_constraintStart_toEndOf="@+id/txt_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_productPrice1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/price1"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>